start to switching to java 8